--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,8 +10,8 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">ENTERMOCK</a>
+    <nav class="navbar navbar-expand-lg navbar-light">
+        <a class="navbar-brand" href="#"><img style="width:165px; height:47px;" src="https://i.ibb.co/6BvCwLH/entermock-logo.jpg"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -30,7 +30,6 @@
                 <a class="dropdown-item" href="/home/COGNIZANT">COGNIZANT</a>
                 <a class="dropdown-item" href="/home/CAPGEMINI">CAPGEMINI</a>
                 <a class="dropdown-item" href="/home/ACCENTURE">ACCENTURE</a>
-
               </div>
             </li>
           </ul>
