--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,7 +11,7 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light">
-        <a class="navbar-brand" href="#"><img style="width:165px; height:47px;" src="https://i.ibb.co/6BvCwLH/entermock-logo.jpg"></a>
+        <a class="navbar-brand" href="/home"><img id="logo_img" src="https://i.ibb.co/6BvCwLH/entermock-logo.jpg"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
