home_page update

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -34,6 +34,9 @@
               </div>
             </li>
           </ul>
+          <div id="login_but">
+            <a class="btn btn-primary" href="#" role="button">LOGIN</a>
+          </div>
           <div >
             <a class="btn btn-primary" href="signup_form.html" role="button">SIGNUP</a>
           </div>
