--- a/public/app.css
+++ b/public/app.css
@@ -2,6 +2,26 @@
     height: 47px;
     width: 165px;
 }
-h1{
-	text-align: center;
+#first_h1{
+    margin-left: 30%;
+    margin-top: 5%;
+}
+#first_p{
+    margin-left: 25%;
+    font-size: 25px;
+    font-weight: bold;
+}
+#second_p{
+    margin-left: 8%;
+    font-size: 25px;
+    margin-top: 2%;
+}
+#first_span{
+    margin-left: 3%;
+}
+#sub_but{
+    margin-left: 45%;
+}
+#login_but{
+    margin-right: 1px;
 }
