--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,9 +1,11 @@
 <%- include("partials/header")%>
+<div id="upper">
 <h1 id="first_h1"> CRACK JOB INTERVIEWS WITH US!</h1>
 <p id="first_p">This Program Helps You To Plan Your Studies And Get Your Dream Jobs.</p>
 <p id="second_p">WE HAVE A WONDERFUL TEAM WHICH GUIDE YOU WELL SO THAT YOU CAN PRACTICEFOR YOURS UPCOMING<br><span id="first_span">PLACEMENTS EXAMS
     TO GET OUR SERVICE PLEASE SUBSCRIBE AND GET YOUR PLAN ACCORDINGLY.</span></p>
 <div id="sub_but">
     <a class="btn btn-success btn-lg" href="#" role="button">GET SUSCRIPTION</a>
+</div>
 </div>
 <%- include("partials/footer")%>
