--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,7 +2,7 @@
 <div id="upper">
 <h1 id="first_h1"> CRACK JOB INTERVIEWS WITH US!</h1>
 <p id="first_p">This Program Helps You To Plan Your Studies And Get Your Dream Job.</p>
-<p id="second_p">WE HAVE A WONDERFUL TEAM WHICH WILL GUIDE YOU WELL SO THAT YOU CAN PRACTICE FOR YOURS UPCOMING<br><span id="first_span">PLACEMENT EXAMS.
+<p id="second_p">WE HAVE A WONDERFUL TEAM WHICH WILL GUIDE YOU WELL SO THAT YOU CAN PRACTICE FOR YOUR UPCOMING<br><span id="first_span">PLACEMENT EXAMS.
     TO GET OUR SERVICE PLEASE SUBSCRIBE AND GET YOUR PLAN ACCORDINGLY.</span></p>
 <div id="sub_but">
     <a class="btn btn-success btn-lg" href="#" role="button">GET SUSCRIPTION</a>
