--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,26 +1,26 @@
 <%- include("partials/header")%>
 <div id="upper">
 <h1 id="first_h1"> CRACK JOB INTERVIEWS WITH US!</h1>
-<p id="first_p">This Program Helps You To Plan Your Studies And Get Your Dream Jobs.</p>
-<p id="second_p">WE HAVE A WONDERFUL TEAM WHICH GUIDE YOU WELL SO THAT YOU CAN PRACTICE FOR YOURS UPCOMING<br><span id="first_span">PLACEMENTS EXAMS
+<p id="first_p">This Program Helps You To Plan Your Studies And Get Your Dream Job.</p>
+<p id="second_p">WE HAVE A WONDERFUL TEAM WHICH WILL GUIDE YOU WELL SO THAT YOU CAN PRACTICE FOR YOUR UPCOMING<br><span id="first_span">PLACEMENT EXAMS.
     TO GET OUR SERVICE PLEASE SUBSCRIBE AND GET YOUR PLAN ACCORDINGLY.</span></p>
 <div id="sub_but">
-    <a class="btn btn-success btn-lg" href="#" role="button">GET SUSCRIPTION</a>
+    <a class="btn btn-success btn-lg" href="#" role="button">GET SUBSCRIPTION</a>
 </div>
 </div>
 <div id="what">
     <h3>WHAT WE PROVIDE TO YOU?</h3>
     <div class="row row-cols-1 row-cols-sm-1 row-cols-md-3 row-cols-lg-3 row-cols-xl-3">
         <div class="card">
-            <img class="card-img-top" src="..." alt="Card image cap">
+            <img class="card-img-top" src="https://i.ibb.co/ygPwBWL/Screenshot-346.jpg">
             <div class="card-body">
-              <h5 class="card-title">Prepration Material</h5>
+              <h5 class="card-title">Preparation Material</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
           </div>
           <div class="card">
-            <img class="card-img-top" src="..." alt="Card image cap">
+            <img class="card-img-top" src="https://i.ibb.co/Cv6B0FT/Screenshot-347.jpg">
             <div class="card-body">
               <h5 class="card-title">MOCK INTERVIEWS</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -28,7 +28,7 @@
             </div>
           </div>
           <div class="card">
-            <img class="card-img-top" src="..." alt="Card image cap">
+            <img class="card-img-top" src="https://i.ibb.co/x5W75f2/Screenshot-348.png">
             <div class="card-body">
               <h5 class="card-title">FEEDBACKS</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
