--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>ENTERMOCK</title>
+  <title>EnterMock</title>
+  <link rel="shortcut icon" href="https://i.ibb.co/n8ncQdH/Screenshot-345.png" />
 	<!-- <link rel="stylesheet" type="text/css" href="bootstrap.css"> -->
 	<!-- <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
   <link rel="stylesheet" type="text/css" href="/app.css">  
@@ -21,7 +22,7 @@
           <ul class="navbar-nav mr-auto">
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                COMPANY NAME
+                COMPANIES
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="/home/TCSdigital">TCS(Digital)</a>
