added content in cards

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,25 +14,31 @@
         <div class="card">
             <img class="card-img-top" src="https://i.ibb.co/ygPwBWL/Screenshot-346.jpg">
             <div class="card-body">
-              <h5 class="card-title">Preparation Material</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">PREPARATION MATERIAL</h5>
+              <p class="card-text">Get the best of quantitative aptitude, verbal, reasoning and programming problems.
+                  Advance towards your placement exams step-by-step.
+              </p>
+              <a href="#" class="btn btn-primary">Get Now</a>
             </div>
           </div>
           <div class="card">
             <img class="card-img-top" src="https://i.ibb.co/Cv6B0FT/Screenshot-347.jpg">
             <div class="card-body">
               <h5 class="card-title">MOCK INTERVIEWS</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <p class="card-text">Still nervous about the interviews? Don't worry, our expert team will help you out with a series of mock 
+                  interviews designed in bottom-up manner.
+              </p>
+              <a href="#" class="btn btn-primary">Book Now</a>
             </div>
           </div>
           <div class="card">
             <img class="card-img-top" src="https://i.ibb.co/x5W75f2/Screenshot-348.png">
             <div class="card-body">
-              <h5 class="card-title">FEEDBACKS</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">GRADUAL FEEDBACKS</h5>
+              <p class="card-text">Resume building & correcting, presentation and technical awareness. We will reinforce learning with feedbacks
+                  that will be help you grow and improve.
+              </p>
+              <a href="#" class="btn btn-primary">Try Now</a>
             </div>
           </div>
           </div>
