--- a/public/app.css
+++ b/public/app.css
@@ -62,9 +62,6 @@
         margin-left: 6%;
         margin-top: 2%;
       }
-      #first_span{
-        margin-left: 0%;
-    }
     #sub_but{
         margin-left: 30%;
     }
@@ -90,5 +87,11 @@
   .card-img-top{
     height:150px;
   }
-  
-  
+  #container {
+    width:100%; margin-right:auto; margin-left:auto;
+  }
+  @media screen and (min-width: 1800px){
+    #container {
+      width:40%; margin-right:auto; margin-left:auto;
+    }
+  }
