responsive-nature added

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,7 +3,7 @@
 <div id="upper">
 <h1 id="first_h1"> CRACK JOB INTERVIEWS WITH US!</h1>
 <p id="first_p">This Program Helps You To Plan Your Studies And Get Your Dream Job.</p>
-<p id="second_p">WE HAVE A WONDERFUL TEAM WHICH WILL GUIDE YOU WELL SO THAT YOU CAN PRACTICE FOR YOUR UPCOMING PLACEMENT EXAMS.
+<p id="second_p">WE HAVE A WONDERFUL TEAM WHICH WILL GUIDE YOU WELL SO THAT YOU CAN PRACTICE FOR YOUR UPCOMING<span> PLACEMENT EXAMS.
     TO GET OUR SERVICE PLEASE SUBSCRIBE AND GET YOUR PLAN ACCORDINGLY.</span></p>
 <div id="sub_but">
     <a class="btn btn-success btn-lg" href="#" role="button">GET SUBSCRIPTION</a>
@@ -11,7 +11,6 @@
 </div>
 <div id="what">
     <h3>WHAT WE PROVIDE TO YOU?</h3>
-    <div class="row row-cols-1 row-cols-sm-1 row-cols-md-3 row-cols-lg-3 row-cols-xl-3">
         <div class="card">
             <img class="card-img-top" src="https://i.ibb.co/ygPwBWL/Screenshot-346.jpg">
             <div class="card-body">
@@ -41,7 +40,6 @@
               </p>
               <a href="#" class="btn btn-primary">Try Now</a>
             </div>
-          </div>
           </div>
 </div>
 </div>
