--- a/views/home.ejs
+++ b/views/home.ejs
@@ -11,6 +11,7 @@
 </div>
 <div id="what">
     <h3>WHAT WE PROVIDE TO YOU?</h3>
+    <div class="row row-cols-1 row-cols-sm-1 row-cols-md-1 row-cols-lg-3 row-cols-xl-3">
         <div class="card">
             <img class="card-img-top" src="https://i.ibb.co/ygPwBWL/Screenshot-346.jpg">
             <div class="card-body">
@@ -40,6 +41,7 @@
               </p>
               <a href="#" class="btn btn-primary">Try Now</a>
             </div>
+          </div>
           </div>
 </div>
 </div>
