--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,6 +3,7 @@
 <head>
   <title>EnterMock</title>
   <link rel="shortcut icon" href="https://i.ibb.co/n8ncQdH/Screenshot-345.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- <link rel="stylesheet" type="text/css" href="bootstrap.css"> -->
 	<!-- <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
   <link rel="stylesheet" type="text/css" href="/app.css">  
