--- a/public/app.css
+++ b/public/app.css
@@ -7,6 +7,7 @@
 }
 #login_but{
     margin-right: 2px;
+    margin-bottom: 2px;
 }
   @media screen and (min-width: 601px) {
     #first_h1{
@@ -102,7 +103,4 @@
   }
   .card-img-top{
     height:150px;
-  }
-  #container {
-    width:100%; margin-right:auto; margin-left:auto;
   }
