images and contents have been added

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -45,53 +45,51 @@
           <div class="how-section1">
             <div class="row">
                 <div class="col-md-6 how-img">
-                    <img src="https://image.ibb.co/dDW27U/Work_Section2_freelance_img1.png" class="rounded-circle img-fluid" alt=""/>
+                    <img src="https://i.ibb.co/kGNXrjs/2.jpg" class="rounded-circle img-fluid" alt="IMAGE"/>
                 </div>
                 <div class="col-md-6">
-                    <h4>Find rewarding projects</h4>
-                                <h4 class="subheading">GetLance is a great place to find more clients, and to run and grow your own freelance business.</h4>
-                <p class="text-muted">Freedom to work on ideal projects. On GetLance, you run your own business and choose your own clients and projects. Just complete your profile and we’ll highlight ideal jobs. Also search projects, and respond to client invitations.
-                                    Wide variety and high pay. Clients are now posting jobs in hundreds of skill categories, paying top price for great work.
-                                    More and more success. The greater the success you have on projects, the more likely you are to get hired by clients that use GetLance.</p>
+                    <h4>Worried and Confused?</h4>
+                                <h4 class="subheading">Are you worried about your placement exams and interviews? Does the thought of appearing in the exams scare you?</h4>
+                <p class="text-muted">Don't worry because we will teach you the recipe to cook your dream opportunity. From materials that will help
+                  you improve your logical and quantitative abilities, we will also provide you quick tips to land the perfect score in your exams. Is
+                  English stopping you everytime? While the fact that it can't be done in a short span is true, we have tricks that will balance your 
+                  preparation and won't let it affect you as well. What else? Well, we will also give you some secret tips that are collected by people
+                  who actually appeared in these interviews. Guess what, these include people who cracked it as well as failed (We all learn from mistakes
+                  afterall &#128517;).
+                </p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-6">
-                    <h4>Get hired quickly</h4>
-                                <h4 class="subheading">GetLance makes it easy to connect with clients and begin doing great work.</h4>
-                                <p class="text-muted">Streamlined hiring. GetLance’s sophisticated algorithms highlight projects you’re a great fit for.
-                                    Top Rated and Rising Talent programs. Enjoy higher visibility with the added status of prestigious programs.
-                                    Do substantial work with top clients. GetLance pricing encourages freelancers to use GetLance for repeat relationships with their clients.</p>
+                    <h4>Why EnterMock?</h4>
+                                <h4 class="subheading">Why us when there are other free sources? Will it be even worth the price(Hard-earned money
+                                  ,ain't it)?</h4>
+                                <p class="text-muted">EnterMock should be your first preference because it prepares you for the most important part, the interviews.
+                                  Not only do we focus on the problem solving but give emphasis to mock interviews as well. This has a bunch of benefits. Firstly, the nightmare
+                                  of appearing for an interview will go as you would have already done that quite a few times. Secondly, you would have made all the mistakes
+                                  beforehand and the chances of you messing-up your interview will be near zero. Thirdly, you will be able to organize your resume and learn
+                                  how and what to speak and the order in which you should speak. Order? What does this even mean? Well this is a secret trick that will attract
+                                  the interviewers and throw a sturdy impression.
+                                </p>
                 </div>
                 <div class="col-md-6 how-img">
-                    <img src="https://image.ibb.co/cHgKnU/Work_Section2_freelance_img2.png" class="rounded-circle img-fluid" alt=""/>
+                    <img src="https://i.ibb.co/sQ4HKMJ/hapy.jpg" class="rounded-circle img-fluid" alt=""/>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-6 how-img">
-                     <img src="https://image.ibb.co/ctSLu9/Work_Section2_freelance_img3.png" class="rounded-circle img-fluid" alt=""/>
+                     <img src="https://i.ibb.co/sm8z2y3/happyemploye.jpg" class="rounded-circle img-fluid" alt=""/>
                 </div>
                 <div class="col-md-6">
-                    <h4>Work efficiently, effectively.</h4>
-                                <h4 class="subheading">With GetLance, you have the freedom and flexibility to control when, where, and how you work. Each project includes an online workspace shared by you and your client, allowing you to:</h4>
-                                <p class="text-muted">Send and receive files. Deliver digital assets in a secure environment.
-                                    Share feedback in real time. Use GetLance Messages to communicate via text, chat, or video.
-                                    Use our mobile app. Many features can be accessed on your mobile phone when on the go.</p>
+                    <h4>Happy you, happy we.</h4>
+                                <h4 class="subheading">How do we ensure this? What kind of happiness is this? </h4>
+                                <p class="text-muted">Well, our team comprises of people who have been through these times and we very well understand
+                                  that this path is not very easy. We have hence formulated a progressive path with what we call 'GRADUAL FEEDBACK'.
+                                This way we start with basic interviews on selective topics first. Once you are ready with it, next topics follow. This continues
+                              and you yourself develop the confidence to sit for a full interview. By this time you adapt to the interview environment and
+                            learn to formulate and organize your answers as well. What else do you need to crack your dream interview? Excited? Believe it,
+                          we are more excited than you to see that smile on your face once you land your dream job. All the best! </p>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-md-6">
-                    <h4>Get paid on time</h4>
-                                <h4 class="subheading">All projects include GetLance Payment Protection — helping ensure that you get paid for all work successfully completed through the freelancing website.</h4>
-                                <p class="text-muted">All invoices and payments happen through GetLance. Count on a simple and streamlined process.
-                                    Hourly and fixed-price projects. For hourly work, submit timesheets through GetLance. For fixed-price jobs, set milestones and funds are released via GetLance escrow features.
-                                    Multiple payment options. Choose a payment method that works best for you, from direct deposit or PayPal to wire transfer and more.</p>
-                </div>
-                <div class="col-md-6 how-img">
-                    <img src="https://image.ibb.co/gQ9iE9/Work_Section2_freelance_img4.png" class="rounded-circle img-fluid" alt=""/>
-                </div>
-            </div>
-               </div>
         </div>
 
 <%- include("partials/footer")%>
