--- a/views/home.ejs
+++ b/views/home.ejs
@@ -61,6 +61,7 @@
             </div>
             <div class="row">
                 <div class="col-md-6">
+                  <img id="change"src="https://i.ibb.co/sQ4HKMJ/hapy.jpg" class="rounded-circle img-fluid" alt=""/>
                     <h4>Why EnterMock?</h4>
                                 <h4 class="subheading">Why us when there are other free sources? Will it be even worth the price(Hard-earned money
                                   ,ain't it)?</h4>
@@ -73,7 +74,7 @@
                                 </p>
                 </div>
                 <div class="col-md-6 how-img">
-                    <img src="https://i.ibb.co/sQ4HKMJ/hapy.jpg" class="rounded-circle img-fluid" alt=""/>
+                    <img id="change2" src="https://i.ibb.co/sQ4HKMJ/hapy.jpg" class="rounded-circle img-fluid" alt=""/>
                 </div>
             </div>
             <div class="row">
