--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,2 +1,6 @@
+<div id="footer_about"class="container">
+    <img id="about_logo" src="https://i.ibb.co/XWrLjQ9/entermock-logo.jpg">
+    <a id="aboutus" href="#" >ABOUT US</a>
+</div>
 </body>
 </html>
