--- a/public/app.css
+++ b/public/app.css
@@ -62,6 +62,13 @@
   width:17%;
   height: 17%;
 }
+#aboutus{
+  float:right;
+  margin-top: 1%;
+  color: #5c5a54;
+  font-size: 20px;
+  margin-right: 1%;
+}
 }
   
   /* If the screen size is 600px wide or less, set the font-size of <div> to 30px */
@@ -120,8 +127,16 @@
       width: 0px;
     }
     #about_logo{
-      width:40%;
-      height: 40%;
+      width:25%;
+      height: 25%;
+      font-size: 8px;
+    }
+    #aboutus{
+      float:right;
+      margin-top: 1%;
+      color: #5c5a54;
+      font-size: 10px;
+      margin-right: 1%;
     }
   }
   .card-img-top{
@@ -146,12 +161,6 @@
 }
 #footer_about{
 margin-top: 10%;
-}
-#aboutus{
-  float:right;
-  margin-top: 1%;
-  color: #5c5a54;
-  font-size: 20px;
 }
 #aboutus:hover{
   color: #ffa500;
