--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -41,7 +41,7 @@
             <a class="btn btn-primary" href="#" role="button">LOGIN</a>
           </div>
           <div >
-            <a class="btn btn-primary" href="/home/signup" role="button">SIGNUP</a>
+            <a class="btn btn-primary" href="/register" role="button">SIGNUP</a>
           </div>
         </div>
       </nav>
