created login form

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -38,7 +38,7 @@
             </li>
           </ul>
           <div id="login_but">
-            <a class="btn btn-primary" href="#" role="button">LOGIN</a>
+            <a class="btn btn-primary" href="/login" role="button">LOGIN</a>
           </div>
           <div >
             <a class="btn btn-primary" href="/register" role="button">SIGNUP</a>
