--- a/views/register.ejs
+++ b/views/register.ejs
@@ -4,23 +4,23 @@
       <div class="form-row">
          <div class="form-group col-md-6">
           <label for="firstname4">First Name</label>
-          <input type="text" class="form-control" placeholder="First name" required="">
+          <input type="text" name="fname" class="form-control" placeholder="First name" required="true">
         </div>
         <div class="form-group col-md-6">
           <label for="lastname4">Last Name</label>
-          <input type="text" class="form-control" placeholder="Last name" required="">
+          <input type="text" name="lname"class="form-control" placeholder="Last name" required="true">
         </div>
         <div class="form-group col-md-6">
           <label for="inputEmail4">Email</label>
-          <input type="email" class="form-control" id="inputEmail4" placeholder="Email" required="">
+          <input type="email" class="form-control" name="email" id="inputEmail4" placeholder="Email" required="true">
         </div>
         <div class="form-group col-md-6">
           <label for="inputPassword4">Password</label>
-          <input type="password" class="form-control" id="inputPassword4" placeholder="Password" required="">
+          <input type="password" class="form-control" name="password" id="inputPassword4" placeholder="Create Password" required="true">
         </div>
         <div class="form-group col-md-6">
         <label for="phone">Phone Number  </label>
-      <input type="tel" id="phone" class="form-control" name="phone" placeholder="123-45-678" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" required>
+      <input type="tel" id="phone" class="form-control" name="phone" placeholder="0123456789" pattern="[0-9]{3}[0-9]{4}[0-9]{3}" >
     </div>
     <div class="form-group col-md-6">
       <label for="exampleFormControlFile1">RESUME</label>
@@ -30,17 +30,18 @@
       </div>
       <div class="form-group">
         <label for="inputAddress">Address</label>
-        <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+        <input type="text" class="form-control" name="address" id="inputAddress" placeholder="Street & city">
+        
       </div>
       <div class="form-group">
         <div class="form-check">
           <input class="form-check-input" type="checkbox" id="gridCheck">
           <label class="form-check-label" for="gridCheck">
-            Check me out
+            I agree to the terms and conditions*
           </label>
         </div>
       </div>
-      <button type="submit" class="btn btn-primary">Sign in</button>
+      <button type="submit" class="btn btn-primary">Sign Up</button>
     </form>
     </div>
     
