--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,6 +1,6 @@
 <%- include("partials/header")%>
 <div class="container">
-    <form>
+    <form action="/register" method="post">
       <div class="form-row">
          <div class="form-group col-md-6">
           <label for="firstname4">First Name</label>
