--- a/views/register.ejs
+++ b/views/register.ejs
@@ -3,12 +3,12 @@
     <form action="/register" method="post">
       <div class="form-row">
          <div class="form-group col-md-6">
-          <label for="firstname4">First Name</label>
-          <input type="text" name="fname" class="form-control" placeholder="First name" required="true">
+          <label for="name4">Name</label>
+          <input type="text" name="name" class="form-control" placeholder="Name" required="true">
         </div>
         <div class="form-group col-md-6">
-          <label for="lastname4">Last Name</label>
-          <input type="text" name="lname"class="form-control" placeholder="Last name" required="true">
+          <label for="username4">USER Name</label>
+          <input type="text" name="username"class="form-control" placeholder=" USER Name" required="true">
         </div>
         <div class="form-group col-md-6">
           <label for="inputEmail4">Email</label>
