--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,12 +3,12 @@
     <form action="/login" method="POST">
       <div class="form-row">
         <div class="form-group col-md-12">
-          <label for="inputEmail4">Email</label>
-          <input type="email" class="form-control" id="inputEmail4" placeholder="Email" required>
+          <label for="username4">USER Name</label>
+          <input type="text" name="username"class="form-control" placeholder=" USER Name" required="true">
         </div>
         <div class="form-group col-md-12">
           <label for="inputPassword4">Password</label>
-          <input type="password" class="form-control" id="inputPassword4" placeholder="Password" required>
+          <input type="password" class="form-control" name="password" id="inputPassword4" placeholder="Create Password" required="true">
         </div>    
       </div>
       <div class="form-group">
