--- a/public/app.css
+++ b/public/app.css
@@ -165,3 +165,15 @@ margin-top: 10%;
 #aboutus:hover{
   color: #ffa500;
 }
+.dropdown:hover>.dropdown-menu {
+  display: block;
+}
+
+.dropdown>.dropdown-toggle:active {
+  /*Without this, clicking will make it sticky*/
+    pointer-events: none;
+}
+.dropdown{
+  margin-right: 2px;
+  margin-bottom: 2px;
+}
