--- a/views/home.ejs
+++ b/views/home.ejs
@@ -16,7 +16,7 @@
               <p class="card-text">Get the best of quantitative aptitude, verbal, reasoning and programming problems.
                   Advance towards your placement exams step-by-step.
               </p>
-              <a href="#" class="btn btn-primary">Get Now</a>
+              <a href="/prepare" class="btn btn-primary">Get Now</a>
             </div>
           </div>
           <div class="card">
