--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,7 +8,7 @@
         </div>
         <div class="form-group col-md-12">
           <label for="inputPassword4">Password</label>
-          <input type="password" class="form-control" name="password" id="inputPassword4" placeholder="Create Password" required="true">
+          <input type="password" class="form-control" name="password" id="inputPassword4" placeholder="Password" required="true">
         </div>    
       </div>
       <div class="form-group">
