added mail to admin

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -4,11 +4,11 @@
       <div class="form-row">
          <div class="form-group col-md-6">
           <label for="name4">Name</label>
-          <input type="text" name="name" class="form-control" placeholder="Name" required="true">
+          <input type="text" name="name" class="form-control" placeholder="Full Name" required="true">
         </div>
         <div class="form-group col-md-6">
           <label for="username4">USER Name</label>
-          <input type="text" name="username"class="form-control" placeholder=" USER Name" required="true">
+          <input type="text" name="username"class="form-control" placeholder=" create a username Name" required="true">
         </div>
         <div class="form-group col-md-6">
           <label for="inputEmail4">Email</label>
