--- a/views/register.ejs
+++ b/views/register.ejs
@@ -3,12 +3,12 @@
     <form action="/register" method="post">
       <div class="form-row">
          <div class="form-group col-md-6">
-          <label for="name4">Name</label>
-          <input type="text" name="name" class="form-control" placeholder="Full Name" required="true">
+          <label for="name4">Full Name</label>
+          <input type="text" name="name" class="form-control" placeholder="John Wolter" required="true">
         </div>
         <div class="form-group col-md-6">
           <label for="username4">USER Name</label>
-          <input type="text" name="username"class="form-control" placeholder=" create a username Name" required="true">
+          <input type="text" name="username"class="form-control" placeholder="ex. wolterjohn123" required="true">
         </div>
         <div class="form-group col-md-6">
           <label for="inputEmail4">Email</label>
@@ -20,7 +20,7 @@
         </div>
         <div class="form-group col-md-6">
         <label for="phone">Phone Number  </label>
-      <input type="tel" id="phone" class="form-control" name="phone" placeholder="0123456789" pattern="[0-9]{3}[0-9]{4}[0-9]{3}" >
+      <input type="tel" id="phone" class="form-control" name="phone" placeholder="7081416161" pattern="[0-9]{3}[0-9]{4}[0-9]{3}" >
     </div>
     <div class="form-group col-md-6">
       <label for="exampleFormControlFile1">RESUME</label>
