--- a/views/login.ejs
+++ b/views/login.ejs
@@ -21,6 +21,10 @@
       </div>
       <button type="submit" class="btn btn-primary">Sign in</button>
     </form>
+    <a href="/forgot">Forgot password</a>
+<h4>
+	New User? 
+</h4><a href="/register">Sign Up here</a>
     </div>
     
 <%- include("partials/footer")%>
