--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,5 +1,5 @@
 <%- include("partials/header")%>
-<h1 id="first_h1"> CRACK JOB INTERVIEWS<span id="with_us"> WITH US!</span></h1>
+<h1 id="first_h1"> <span id="kk">CRACK JOB INTERVIEWS</span><span id="with_us"> WITH US!</span></h1>
 <p id="first_p">This Program Helps You To Plan Your Studies And Get <span id="your">Your Dream Job.</span></p>
 <p id="second_p">WE HAVE A WONDERFUL TEAM WHICH WILL GUIDE YOU WELL SO THAT YOU CAN PRACTICE FOR YOUR UPCOMING PLACEMENT EXAMS.
     TO GET OUR SERVICE PLEASE SUBSCRIBE AND GET YOUR PLAN ACCORDINGLY.</p>
