--- a/public/app.css
+++ b/public/app.css
@@ -100,11 +100,12 @@
     }
     #kk{
       font-size: 25px;
-      margin-left:14%;
+      margin-left:10%;
     }
 
     #with_us{
       margin-left: 28%;
+      font-size: 28px;
     }
     #your{
       margin-left: 18%;
