--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,5 @@
 <div id="footer_about"class="container">
-    <a class="btn btn-success btn-lg" href="#" role="button">GET SUBSCRIPTION</a>
+    <a class="btn btn-success" href="#" role="button">subscribe</a>
     <a id="aboutus" href="#" >CONTACT US</a>
     <a id="aboutus" href="#" >ABOUT US</a>
 </div>
