--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,15 @@
 <div id="footer_about"class="container">
+    <div class="row">
+        <div class="col-md-6">
     <a class="btn btn-success" href="#" role="button">subscribe</a>
+        </div>
+        <div class="col-md-3">
     <a id="aboutus" href="#" >CONTACT US</a>
+    </div>
+    <div class="col-md-3">
     <a id="aboutus" href="#" >ABOUT US</a>
+    </div>
+    </div>
 </div>
 </body>
 </html>
