--- a/public/app.css
+++ b/public/app.css
@@ -62,6 +62,13 @@
   width:17%;
   height: 17%;
 }
+#aboutus{
+  float:right;
+  margin-top: 1%;
+  color: #5c5a54;
+  font-size: 20px;
+  margin-right: 1%;
+}
 }
   
   /* If the screen size is 600px wide or less, set the font-size of <div> to 30px */
@@ -129,6 +136,13 @@
       width:25%;
       height: 25%;
       font-size: 8px;
+    }
+    #aboutus{
+      float:right;
+      margin-top: 1%;
+      color: #5c5a54;
+      font-size: 20px;
+      margin-right: 1%;
     }
   }
   .card-img-top{
