--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,12 +1,8 @@
 <div id="footer_about"class="container">
     <div class="row">
-        <div class="col-md-6">
-    <a class="btn btn-success" href="#" role="button">subscribe</a>
-        </div>
-        <div class="col-md-3">
+        <div class="col-md-12">
+    <a class="btn btn-success btn-lg" href="#" role="button">GET SUBSCRIPTION</a>
     <a id="aboutus" href="#" >CONTACT US</a>
-    </div>
-    <div class="col-md-3">
     <a id="aboutus" href="#" >ABOUT US</a>
     </div>
     </div>
