--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,8 +2,8 @@
     <div class="row">
         <div class="col-md-12">
     <a class="btn btn-success btn-lg" href="#" role="button">GET SUBSCRIPTION</a>
-    <a id="aboutus" href="#" >CONTACT US</a>
-    <a id="aboutus" href="#" >ABOUT US</a>
+    <a class="aboutus" id="contactus" href="#" >CONTACT US</a>
+    <a class="aboutus" href="#" >ABOUT US</a>
     </div>
     </div>
 </div>
