--- a/public/app.css
+++ b/public/app.css
@@ -146,6 +146,9 @@
       
       margin-right: 10%;
     }
+    #sub_but2{
+      margin-right: 100px;
+    }
   }
   .card-img-top{
     height:150px;
