--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,7 @@
 <div id="footer_about"class="container">
     <div class="row">
         <div class="col-md-12">
-    <a class="btn btn-success btn-lg" href="#" role="button">GET SUBSCRIPTION</a>
+    <a id="sub_but2"class="btn btn-success btn-lg" href="#" role="button">GET SUBSCRIPTION</a>
     <a class="aboutus" id="contactus" href="#" >CONTACT US</a>
     <a class="aboutus" href="#" >ABOUT US</a>
     </div>
