profile settings done

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -52,8 +52,7 @@
               </button>
               <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                 <a class="dropdown-item" href="/home/<%=currentUser._id %>">ACCOUNT(<%= currentUser.name %>)</a>
-                <a class="dropdown-item" href="#"><span><i class="fas fa-cog"></i></span>  Settings</a>
-                <a class="dropdown-item" href="#"><%=currentUser._id %></a>
+                <a class="dropdown-item" href="/home/<%=currentUser._id%>/settings"><span><i class="fas fa-cog"></i></span>  Settings</a>
               </div>
             </div>
             <div >
