--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,4 +1,5 @@
 <%- include("partials/header")%>
+<%- include("partials/flash")%>
 <div class="container">
     <form action="/login" method="POST">
       <div class="form-row">
@@ -12,12 +13,6 @@
         </div>    
       </div>
       <div class="form-group">
-        <div class="form-check">
-          <input class="form-check-input" type="checkbox" id="gridCheck">
-          <label class="form-check-label" for="gridCheck">
-            I agree to the terms and conditions*
-          </label>
-        </div>
       </div>
       <button type="submit" class="btn btn-primary">Sign in</button>
     </form>
