--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,7 +6,7 @@
 <p id="second_p">WE HAVE A WONDERFUL TEAM WHICH WILL GUIDE YOU WELL SO THAT YOU CAN PRACTICE FOR YOUR UPCOMING PLACEMENT EXAMS.
     TO GET OUR SERVICE PLEASE SUBSCRIBE AND GET YOUR PLAN ACCORDINGLY.</p>
 <div id="sub_but">
-    <a class="btn btn-success btn-lg" href="#" role="button">GET SUBSCRIPTION</a>
+    <a class="btn btn-success btn-lg" href="/payScheme" role="button">GET SUBSCRIPTION</a>
 </div>
 <div id="what">
     <h3>WHAT WE PROVIDE TO <span id="you">YOU?</span></h3>
