--- a/views/prepare.ejs
+++ b/views/prepare.ejs
@@ -21,7 +21,7 @@
       
 <div class="row">
   <div class="column">
-  	<a href="#" style="text-decoration: none;color:#06782c">
+  	<a href="/c_material" style="text-decoration: none;color:#06782c">
    <div class="card" >C programming</div></a>
   </div>
   <div class="column"><a href="#" style="text-decoration: none;color:#06782c">
