--- a/views/home.ejs
+++ b/views/home.ejs
@@ -47,7 +47,7 @@
           <div class="how-section1">
             <div class="row">
                 <div class="col-md-6 how-img">
-                    <img src="https://i.ibb.co/kGNXrjs/2.jpg" class="rounded-circle img-fluid" alt="IMAGE"/>
+                    <img src="https://media2.giphy.com/media/ygi7uUxhZQ8iVYVg6J/giphy.webp" class="rounded-circle img-fluid" alt="IMAGE"/>
                 </div>
                 <div class="col-md-6">
                     <h4>Worried and Confused?</h4>
@@ -76,12 +76,12 @@
                                 </p>
                 </div>
                 <div class="col-md-6 how-img">
-                    <img id="change2" src="https://i.ibb.co/sQ4HKMJ/hapy.jpg" class="rounded-circle img-fluid" alt=""/>
+                    <img id="change2" src="https://media4.giphy.com/media/JTlH53xRj8vB2UQNrz/giphy.webp" class="rounded-circle img-fluid" alt=""/>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-6 how-img">
-                     <img src="https://i.ibb.co/sm8z2y3/happyemploye.jpg" class="rounded-circle img-fluid" alt=""/>
+                     <img src="https://media4.giphy.com/media/VxECpEum6rpxhleN7g/giphy.webp" class="rounded-circle img-fluid" alt=""/>
                 </div>
                 <div class="col-md-6">
                     <h4>Happy you, happy we.</h4>
