--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta name="google-site-verification" content="WRvtBM5eDYO2Vmfio0PhtIuGPdMnLxTpX_A7J8EB84o" />
   <title>EnterMock</title>
   <link rel="shortcut icon" href="https://i.ibb.co/n8ncQdH/Screenshot-345.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
