added the c materials

--- a/views/payScheme.ejs
+++ b/views/payScheme.ejs
@@ -29,8 +29,8 @@
       <div>
       </div>
     </div>
-    <div style="margin-left: 58%;">
-           <h3> All this for just Rs. 149</h3>
+    <div style="margin-left: 54%;">
+           <h3> All this for just Rs. <del>299</del> 149/-</h3>
     <a id="sub_but2"class="btn btn-success btn-lg" href="/payment" role="button">Pay Now</a>
     </div>
    
