moved the materials to a different folder

--- a/views/materials/c_material.ejs
+++ b/views/materials/c_material.ejs
@@ -1,5 +1,5 @@
-<%- include("partials/header")%>
-<div class="container" style="border: 2px solid gray; border-radius:3px; margin-bottom:7px;box-shadow: 5px 5px #010f26;">
+<%- include("../partials/header")%>
+<div class="container" style="border: 2px solid gray; border-radius:3px; margin-bottom:20px;box-shadow: 5px 5px #010f26;">
     <h5>Question 1. Factorial of a number.<br></h5>
 <button data-toggle="collapse" class="btn btn-primary" data-target="#demo">Solution</button>
 <div id="demo" class="collapse">
@@ -31,7 +31,7 @@
 </div>
 </div>
 
-<div class="container" style="border: 2px solid gray; border-radius:3px; margin-bottom:7px;box-shadow: 5px 5px #010f26;">
+<div class="container" style="border: 2px solid gray; border-radius:3px; margin-bottom:20px;box-shadow: 5px 5px #010f26;">
     <h5>Question 2. Find whether number is prime.</h5>
 <button data-toggle="collapse" class="btn btn-primary" data-target="#demo2">Solution</button>
 <div id="demo2" class="collapse"><h6>
@@ -56,7 +56,7 @@
         }<br></h6>
 </div>
 </div>
-<div class="container" style="border: 2px solid gray; border-radius:3px; margin-bottom:7px;box-shadow: 5px 5px #010f26;">
+<div class="container" style="border: 2px solid gray; border-radius:3px; margin-bottom:20px;box-shadow: 5px 5px #010f26;">
     <h5>Question 3. Find GCD of two numbers.</h5>
 <button data-toggle="collapse" class="btn btn-primary" data-target="#demo3">Solution</button>
 <div id="demo3" class="collapse"><h6>
@@ -81,7 +81,7 @@
 
 </div>
 </div>
-<div class="container" style="border: 2px solid gray; border-radius:3px; margin-bottom:7px;box-shadow: 5px 5px #010f26;">
+<div class="container" style="border: 2px solid gray; border-radius:3px; margin-bottom:20px;box-shadow: 5px 5px #010f26;">
     <h5>Question 4. Find whether number is palindrome.</h5>
 <button data-toggle="collapse" class="btn btn-primary" data-target="#demo4">Solution</button>
 <div id="demo4" class="collapse"><h6>
@@ -112,7 +112,7 @@ return 0;<br>
 
 </div>
 </div>
-<div class="container" style="border: 2px solid gray; border-radius:3px; margin-bottom:7px;box-shadow: 5px 5px #010f26;">
+<div class="container" style="border: 2px solid gray; border-radius:3px; margin-bottom:20px;box-shadow: 5px 5px #010f26;">
     <h5>Question 5. Find reverse of a given number.</h5>
 <button data-toggle="collapse" class="btn btn-primary" data-target="#demo5">Solution</button>
 <div id="demo5" class="collapse"><h6>
@@ -137,7 +137,7 @@ return 0;<br>
 
 </div>
 </div>
-<div class="container" style="border: 2px solid gray; border-radius:3px; margin-bottom:7px;box-shadow: 5px 5px #010f26;">
+<div class="container" style="border: 2px solid gray; border-radius:3px; margin-bottom:20px;box-shadow: 5px 5px #010f26;">
     <h5>Question 6. Reverse a given string.</h5>
 <button data-toggle="collapse" class="btn btn-primary" data-target="#demo6">Solution</button>
 <div id="demo6" class="collapse"><h6>
@@ -166,4 +166,4 @@ return 0;<br>
     }<br>
 </div>
 </div>
-<%- include("partials/footer")%>
+<%- include("../partials/footer")%>
