--- a/views/materials/c_material.ejs
+++ b/views/materials/c_material.ejs
@@ -1,4 +1,5 @@
 <%- include("../partials/header")%>
+<h1>I am a disco dancer</h1>
 <div class="container" style="border: 2px solid gray; border-radius:3px; margin-bottom:20px;box-shadow: 5px 5px #010f26;">
     <h5>Question 1. Factorial of a number.<br></h5>
 <button data-toggle="collapse" class="btn btn-primary" data-target="#demo">Solution</button>
