--- a/views/materials/c_material.ejs
+++ b/views/materials/c_material.ejs
@@ -1,169 +1,15 @@
 <%- include("../partials/header")%>
+<% if((currentUser.isAdmin)){ %>
+    <div class="nav_but">
+        <a class="btn btn-primary btn-lg" href="/c_material/update" role="button">ADD new question </a>
+      </div>
+<% } %>
+<% c_ques.forEach(function(c_que){%>
 <div class="container" style="border: 2px solid gray; border-radius:3px; margin-bottom:20px;box-shadow: 5px 5px #010f26;">
-    <h5>Question 1. Factorial of a number.<br></h5>
+    <h5><%=c_que.question%><br></h5>
 <button data-toggle="collapse" class="btn btn-primary" data-target="#demo">Solution</button>
 <div id="demo" class="collapse">
-    <h6>
-    #include &lt;stdio.h><br>
-        int factorial_of_a_number(int n)<br>
-        {<br>
-        int fact = 1, i;<br>
-        if(n == 0)<br>
-        return 1;<br>
-        else<br>
-        for(i = 1; i <= n; i++)<br>
-        {<br>
-        fact = fact * i;<br>
-        }<br>
-        return fact;<br>
-        }<br>
-        int main()<br>
-        {<br>
-        int n;<br>
-        printf("Enter the number : ");<br>
-        scanf("%d",&n);<br>
-        if(n < 0)<br>
-        printf("Invalid output");<br>
-        else<br>
-        printf("Factorial of the number %d is %d" ,n, factorial_of_a_number(n));<br>
-        return 0;<br>
-        }<br></h6>
+    <h6><%=c_que.answer%><h6>
 </div>
 </div>
-
-<div class="container" style="border: 2px solid gray; border-radius:3px; margin-bottom:20px;box-shadow: 5px 5px #010f26;">
-    <h5>Question 2. Find whether number is prime.</h5>
-<button data-toggle="collapse" class="btn btn-primary" data-target="#demo2">Solution</button>
-<div id="demo2" class="collapse"><h6>
-    #include&lt;stdio.h><br>
-        int main()<br>
-        {<br>
-        int n,i;<br>
-        printf(“\nEnter the number : “);<br>
-        scanf(“%d”,&n);<br>
-        for(i = 2; i <= n/2; i++)<br>
-        {<br>
-        if(n % i ==0)<br>
-        {<br>
-        break;<br>
-        }<br>
-        }<br>
-        if(i > n/2)<br>
-        printf(“\n%d is a Prime Number\n”,n);<br>
-        else<br>
-        printf(“\n%d is not a Prime Number\n”, n);<br>
-        return 0;<br>
-        }<br></h6>
-</div>
-</div>
-<div class="container" style="border: 2px solid gray; border-radius:3px; margin-bottom:20px;box-shadow: 5px 5px #010f26;">
-    <h5>Question 3. Find GCD of two numbers.</h5>
-<button data-toggle="collapse" class="btn btn-primary" data-target="#demo3">Solution</button>
-<div id="demo3" class="collapse"><h6>
-    #include&lt;stdio.h><br>
-        int main()<br>
-        {<br>
-        int a,b,gcd;<br>
-        printf(“\nEnter two numbers : “);<br>
-        scanf(“%d %d”,&a,&b);<br>
-        int i;<br>
-        for(i = 1; i <= a && i <= b; i++)<br>
-        {<br>
-        if((a % i == 0) && (b % i == 0))<br>
-        {<br>
-        gcd = i;<br>
-        }<br>
-        }<br>
-        printf(“\nGCD of %d and %d is %d “,a,b,gcd);<br>
-        printf(“\n”);<br>
-        return 0;<br>
-        }<br>   
-
-</div>
-</div>
-<div class="container" style="border: 2px solid gray; border-radius:3px; margin-bottom:20px;box-shadow: 5px 5px #010f26;">
-    <h5>Question 4. Find whether number is palindrome.</h5>
-<button data-toggle="collapse" class="btn btn-primary" data-target="#demo4">Solution</button>
-<div id="demo4" class="collapse"><h6>
-    #include&lt;stdio.h><br>
-    int main()<br>
-{<br>
-int n, reverse = 0, remainder, number;<br>
-
-printf("Enter an integer: ");<br>
-scanf(“%d”, &n);<br>
-
-number = n;<br>
-
-while( n!=0 )<br>
-{<br>
-remainder = n%10;<br>
-reverse = reverse*10 + remainder;<br>
-n /= 10;<br>
-}<br>
-
-if (number == reverse)<br>
-printf("\n%d is a palindrome\n", number);<br>
-else<br>
-printf("\n%d is not a palindrome\n", number);<br>
-
-return 0;<br>
-}<br>
-
-</div>
-</div>
-<div class="container" style="border: 2px solid gray; border-radius:3px; margin-bottom:20px;box-shadow: 5px 5px #010f26;">
-    <h5>Question 5. Find reverse of a given number.</h5>
-<button data-toggle="collapse" class="btn btn-primary" data-target="#demo5">Solution</button>
-<div id="demo5" class="collapse"><h6>
-    #include&lt;stdio.h><br>
-    int main()<br>
-{<br>
-int n, rev = 0, rem;<br>
-printf(“\nEnter a number : “);<br>
-scanf(“%d”, &n);<br>
-printf(“\nReversed Number : “);<br>
-while(n != 0)<br>
-{<br>
-rem = n%10;<br>
-rev = rev*10 + rem;<br>
-n /= 10;<br>
-}<br>
-
-printf(“%d\n”, rev);<br>
-
-return 0;<br>
-}<br>
-
-</div>
-</div>
-<div class="container" style="border: 2px solid gray; border-radius:3px; margin-bottom:20px;box-shadow: 5px 5px #010f26;">
-    <h5>Question 6. Reverse a given string.</h5>
-<button data-toggle="collapse" class="btn btn-primary" data-target="#demo6">Solution</button>
-<div id="demo6" class="collapse"><h6>
-    #include&lt;stdio.h><br>
-    int main()<br>
-    {<br>
-    char str[1000], rev[1000];<br>
-    int i, j, count = 0;<br>
-    scanf("%s", str);<br>
-    
-    #finding the length of the string<br>
-    while (str[count] != '')<br>
-    {<br>
-    count++;<br>
-    }<br>
-    j = count - 1;<br>
-    
-    #reversing the string by swapping<br>
-    for (i = 0; i < count; i++) <br>
-    {<br>
-    rev[i] = str[j];<br>
-    j--;<br>
-    }<br>
-    
-    printf(rev);<br>
-    }<br>
-</div>
-</div>
-<%- include("../partials/footer")%>
+<%});%>
